--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -18,10 +18,10 @@
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component renders two slots, one with the toolbar name which renders a :
+        <span>This component renders two slots, one with the toolbar name which renders a :
             <psk-link page="psk-wiki/psk-toolbar">psk-toolbar</psk-link> component.
-        </p>
-        <p>The other one renders the info given in the tag in the newly created .</p>
+        </span>
+        <p>The other one renders the info given between the tags in the newly created .</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
