--- a/pages/psk-wiki/psk-copy-clipboard.html
+++ b/pages/psk-wiki/psk-copy-clipboard.html
@@ -22,7 +22,8 @@
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component has no HTML children.</p>
+        <p>This component has a <code>slot</code> tag so the data you enter between the tags can be rendered as the copy
+            button.</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
