--- a/pages/psk-wiki/psk-example.html
+++ b/pages/psk-wiki/psk-example.html
@@ -4,8 +4,8 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component will create a <code>psk-chapter</code> using the given title property .</p>
-        <p>This <code>psk-chapter</code> will have a slot so the example can be shown on the UI .</p>
+        <span>This component will create a <code>psk-chapter</code> using the given title property .</span>
+        <p>This components role is to show examples to the UI so the explanations can be done easier.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -14,14 +14,31 @@
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component has no HTML children.</p>
+        <p>This component has a slot,as a HTML child, that renders the data between the tags in the new
+            <code>psk-chapter</code>.</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
         <psk-code>
             <psk-example title="Title Example">
+                <psk-list list-type="bullet">
+                    <p>First entry</p>
+                    <p>Second entry</p>
+                    <p>Third entry</p>
+                    <p>Fourth entry</p>
+                </psk-list>
             </psk-example>
         </psk-code>
     </psk-chapter>
 
+    <psk-chapter title="Live Example">
+        <psk-example title="Title Example">
+            <psk-list list-type="bullet">
+                <p>First entry</p>
+                <p>Second entry</p>
+                <p>Third entry</p>
+                <p>Fourth entry</p>
+            </psk-list>
+        </psk-example>
+    </psk-chapter>
 </psk-page>
