--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -5,6 +5,10 @@
 
     <psk-description>
         <p>This component renders an image on the UI using the given properties.</p>
+        <p>If the source property ( <b>src</b> ) does contain a <b>http</b> string in it then the <code>path</code> will
+            get the <code>src</code> property.</p>
+        <p>If the <b>http</b> string is not given then the <code>path</code> will be constructed from scratch but only
+            images in that <code>page</code> can be rendered.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -18,15 +22,11 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-img src="image.png">
-            </psk-img>
-        </psk-code>
-
-        <psk-code title="Title Example">
-            <psk-img>
+            <psk-img title="PSK-img Example" src="PrivateSky/EDFS.png">
             </psk-img>
         </psk-code>
     </psk-chapter>
+
     <psk-example title="Live Example">
         <psk-img title="PSK-img Example" src="PrivateSky/EDFS.png">
         </psk-img>
