--- a/pages/psk-wiki/psk-link.html
+++ b/pages/psk-wiki/psk-link.html
@@ -4,8 +4,10 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component role is to create a link that will respond with a redirect the moment it is clicked.</p>
-        <p>The path to redirect is given using the properties.</p>
+        <p>This component role is to create a link that will respond with a redirect inside that website the moment it
+            is clicked.</p>
+        <p>The path to redirect is given using the properties and if it is not given then the component will not be
+            rendered.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -19,18 +21,20 @@
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component has no HTML children.</p>
+        <p>This component child is a span that will render the info on the<code>button</code>.</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
         <psk-code>
             <psk-link page="https://www.privatesky.xyz">
+                Click me to get redirected!
             </psk-link>
         </psk-code>
     </psk-chapter>
     <psk-chapter title="Live Example">
         <psk-example>
-            <psk-link page="https://www.privatesky.xyz">Click me to get redirected!
+            <psk-link page="https://www.privatesky.xyz">
+                Click me to get redirected!
             </psk-link>
         </psk-example>
     </psk-chapter>
