--- a/pages/psk-wiki/psk-list.html
+++ b/pages/psk-wiki/psk-list.html
@@ -4,9 +4,9 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component will render either a bullet list or an numeric list, based on the values given to the
-            properties .</p>
-        <p>The rendered object will be a list of <code>HTML Elements</code>.</p>
+        <p>This component will render either a bullet list(using the same special characters as in Office) or an numeric
+            list, based on the values given to the properties .</p>
+        <p>Every element in this list will be delimited by a <code>new line</code>(<b>\n</b>).</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -15,12 +15,20 @@
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component has no HTML children.</p>
+        <p>The info sent between the tags will be processed in this way:</p>
+        <p>First of all every element delimited by <b>\n</b> with a length bigger than 0 will be passed in a array.</p>
+        <p>After this for every array element we verify if it's either a inline,start or end tag.</p>
+        <p>If it is any of the above we check for children,in a positive case we add them to a final array that will
+            be rendered, and in a negative case we add only the line to the final array.</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-list list-type="numeric">
+            <psk-list list-type="bullet">
+                <p>First entry</p>
+                <p>Second entry</p>
+                <p>Third entry</p>
+                <p>Fourth entry</p>
             </psk-list>
         </psk-code>
     </psk-chapter>
