--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -17,7 +17,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code language="html">
+        <psk-code>
             <psk-table head="true" footer="true">
                 Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
