--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <script nomodule src="/cardinal.js"></script>
     <script>
         globalConfig = {
-            theme: "default",
-            pagesBasePath: "https://raw.githubusercontent.com/PrivateSky/pwc-apps/master/pages/"
+            theme: "default"
         }
     </script>
 </head>
