--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -10,12 +10,14 @@
     <psk-container>
 		<psk-controller>
 			var state = {
-				name: "Catalin",
-				cardList: controller.generateList(5)
+				name: "Controllers. Integration with Rivets.Js",
+				cardList: controller.generateList(1)
 			};
 			controller.setState(state);
 			controller.bind(state);
 		</psk-controller>
+	    
+	    	<psk-chapter rv-title="data.name">
 
 		<button class="btn btn-primary" rv-on-click="controller.addItem">ADD ITEM IN STATE</button>
 		
@@ -148,6 +150,6 @@
                 <psk-description>{card.description}</psk-description>
             </psk-card>
         </psk-grid>
-	
+	</psk-chapter>
     </psk-container>
 </psk-page>
