--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script nomodule src="/cardinal.js"></script>
     <script>
         globalConfig = {
-            theme: "default"
+            theme: "newlook"
         }
     </script>
 </head>
