--- a/pages/web-components/icon.html
+++ b/pages/web-components/icon.html
@@ -23,21 +23,30 @@
         <psk-code>
             <psk-icon icon="user" disableColor="true" color="rgb(208, 31, 208)">
             </psk-icon>
+        </psk-code>
+        <psk-icon icon="user" disableColor="true" color="rgb(208, 31, 208)">
+        </psk-icon>
+
+        <psk-code>
             <psk-icon icon="at" color="rgb(235, 192, 52)">
             </psk-icon>
+        </psk-code>
+        <psk-icon icon="at" color="rgb(235, 192, 52)">
+        </psk-icon>
+        <psk-code>
             <psk-icon icon="apple" color="rgb(128, 235, 52)">
             </psk-icon>
+        </psk-code>
+        <psk-icon icon="apple" color="rgb(128, 235, 52)">
+        </psk-icon>
+
+        <psk-code>
             <psk-icon icon="amazon" disableColor="true" color="rgb(52, 147, 235)">
             </psk-icon>
         </psk-code>
+        <psk-icon icon="amazon" disableColor="true" color="rgb(52, 147, 235)">
+        </psk-icon>
+
     </psk-chapter>
 
-    <psk-icon icon="user" disableColor="true" color="rgb(208, 31, 208)">
-    </psk-icon>
-    <psk-icon icon="at" color="rgb(235, 192, 52)">
-    </psk-icon>
-    <psk-icon icon="apple" color="rgb(128, 235, 52)">
-    </psk-icon>
-    <psk-icon icon="amazon" disableColor="true" color="rgb(52, 147, 235)">
-    </psk-icon>
 </psk-page>
