--- a/pages/PrivateSky/intro.html
+++ b/pages/PrivateSky/intro.html
@@ -1,8 +1,8 @@
-<psk-slideshow images="/assets/slider/PrivateSky.png,/assets/slider/Architecture.png, /assets/slider/EDFS.png, /assets/slider/Hierarhical.png, /assets/slider/Domains.png, /assets/slider/SSApps.png, /assets/slider/SSAppsDiagram.png"
+<psk-slideshow images="/assets/slider/Architecture.png, /assets/slider/EDFS.png,  /assets/slider/SSApps.png, /assets/slider/SSAppsDiagram.png, /assets/slider/Domains.png, /assets/slider/Hierarhical.png, /assets/slider/PrivateSky.png"
                title="PrivateSky Platform.js"
                caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. MVC light framework for building web applications"
 >
   <button onclick="window.location.href='?PrivateSky/main-innovations'">Innovations</button>
-  <button onclick="window.location.href='?About/About'">About PrivateSky</button>
+  <button onclick="window.location.href='?About/about'">About PrivateSky</button>
 
 </psk-slideshow>
