--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -1,6 +1,6 @@
 <psk-page title="Open Source License">
-    PrivateSky project is a research project created with contributions of Alexandru Ioan Cuza University from Iasi and direct industrial research with the following companies:  Axiologic Research,Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
-    All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under github/PrivateSky is licensed as MIT and LPGPL.
+    PrivateSky open source code was obtained from a  research project coordinated by  Alexandru Ioan Cuza University from Iasi in collaborations  with the following companies:  Axiologic Research (original code contributor),Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
+    All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under <a href="github.com/PrivateSky">PrivateSky Github repositories</a> is licensed as MIT and LPGPL.
     <psk-chapter title="MIT License">
         Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
