--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -1,6 +1,72 @@
-<psk-page title="Open Source License">
+<psk-page title="PrivateSky  Open Source Platform">
     PrivateSky open source code was obtained from a  research project coordinated by  Alexandru Ioan Cuza University from Iasi in collaborations  with the following companies:  Axiologic Research (original code contributor),Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
     All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under <a href="github.com/PrivateSky">PrivateSky Github repositories</a> is licensed as MIT and LPGPL.
+
+    <psk-img src="PrivateSky/PrivateSky.png"></psk-img>
+
+    <psk-toc></psk-toc>
+
+    <psk-chapter title="Intergration and blockchains using swarm communication and executable choreographies">
+        PrivateSky's open-source platform allows the creation of backend or integration layers (like ESBs - Enterprise Service Buses) for cloud and enterprise application. PrivateSky offers a microservices oriented architecture where the microservices composability
+        (orchestration and executable choreographies) is delegated to a "software glue" called swarms (or swarm communication). PrivateSky is also a platform to build decentralized/distributed applications that use blockchain: Distributed Applications
+        - DApps, diverse types of Blockchain Applications, Consortium / Private Distributed Ledgers. The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of
+        performant methods of storing and handling private and confidential data. An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default. For a quick understanding of the swarm communication set
+        we suggest our article
+        <psk-link page="PrivateSky/swarms-explained"> Swarm communication explained</psk-link>
+        Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
+    </psk-chapter>
+
+    <psk-chapter title="EDFS: Near-chain storage">
+        The EDFS sub-project announcement and the near-chain concept is presented in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon,
+        France. A presentation of the idea can be found here:
+        <psk-link page="PrivateSky/main-innovations">Information about EDFS, BARs, CSBs</psk-link>
+
+    </psk-chapter>
+
+    <psk-chapter title="Secret Smart Contracts">
+        The first public presentation of the secret smart contract concept is published in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30,
+        Toulon, France. A short presentation of the concept can be found here:
+        <psk-link page="PrivateSky/main-innovations">Secret Smart Contracts</psk-link>
+    </psk-chapter>
+
+    <psk-chapter title="Self-Sovereign Applications">
+
+        Our preliminary work on Self-Sovereignithy was published in two articles <i>“Private Data System enabling Self-Sovereign Storage managed by Executable Choreographies”</i>, DAIS 2017 - 17th IFIP International Conference on Distributed Applications
+        and Interoperable Systems, Neuchâtel, Switzerland,June 2017 and
+        <i>"Towards a smart society through personal assistants employing executable choreographies" </i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles
+        on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
+        <psk-link page="PrivateSky/main-innovations">Self-Sovereign Applications</psk-link>
+
+    </psk-chapter>
+
+    <psk-chapter title="Replace accounts with assets and transactions">
+        We are working on publishing scientific articles on explaining how blockchain works in priavteSky and our optimised and privacy friendly approach for transaction validation. The preliminary texts can be found here: <psk-link page="PrivateSky/swarms-explained"> Assets and transactions blockchain model</psk-link>
+
+    </psk-chapter>
+
+    <psk-chapter title="New Consensus Agorithms">
+        We are working on publishing scientific articles on this new consensus algorithm. Stay tuned, the preliminary laboratory results look very promising.
+
+    </psk-chapter>
+
+    <psk-chapter title="Lightweight blockchain">
+        We are working on publishing scientific articles on this concept of Lightweight blockchain. Stay tuned, the preliminary laboratory results look very good.
+
+    </psk-chapter>
+
+    <psk-chapter title="Development resources">
+
+        <psk-chapter title="PrivateSky Installation">
+            The preliminary texts can be found our wiki: <a href="https://github.com/privatesky/privatesky/wiki"> PrivateSky installation & Stuff</a>
+
+        </psk-chapter>
+
+        <psk-chapter title="Advanced Technical Details">
+            The preliminary texts can be found here:
+            <psk-link page="Development/Advanced"> Advanced Technical Details</psk-link>
+        </psk-chapter>
+    </psk-chapter>
+
     <psk-chapter title="MIT License">
         Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
