--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,6 @@
                title="PrivateSky Platform.js"
                caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. MVC light framework for building web applications"
 >
-    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'">Innovations</psk-button>
-    <psk-button onclick="window.location.href='?About/about'">About PrivateSky</psk-button>
+    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'" label='Innovations'></psk-button>
+    <psk-button onclick="window.location.href='?About/about'" label="About PrivateSky"></psk-button>
 </psk-slideshow>
