--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <psk-slideshow images=" /assets/slider/PrivateSky.png, /assets/slider/Hierarhical.png, /assets/slider/Domains.png, /assets/slider/EDFS.png,  /assets/slider/SSApps.png, /assets/slider/SSAppsDiagram.png, /assets/slider/Architecture.png"
-               title="PrivateSky Platform: Integration, executable choreographies, blockchain, self sovereign applications as DApps using web components and service workers"
-               caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. MVC light framework for building web applications"
+               title="PrivateSky Platform: Integration, Executable Choreographies, Create new Blockchain Domains, Self Sovereign Applications as DApps using Web Components and Service Workers"
+               caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. Cardinal:MVC light framework for building web applications"
 >
-    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'" label='Innovations'>Innovations</psk-button>
+    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'" >Innovations</psk-button>
     <psk-button onclick="window.location.href='?About/about'" label="About PrivateSky">About PrivateSky</psk-button>
 </psk-slideshow>
