--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,6 @@
                title="PrivateSky Platform: Integration, Executable Choreographies, Create new Blockchain Domains, Self Sovereign Applications as DApps using Web Components and Service Workers"
                caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. Cardinal:MVC light framework for building web applications"
 >
-    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'" >Innovations</psk-button>
-    <psk-button onclick="window.location.href='?About/about'" label="About PrivateSky">About PrivateSky</psk-button>
+    <psk-button onclick="window.location.href='?PrivateSky/main-innovations'" label='Innovations'>Innovations</psk-button>
+    <psk-button onclick="window.location.href='?About/about'" label="About PrivateSky"></psk-button>
 </psk-slideshow>
